[package]
name = "ice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc-ice="0.6.6"
tokio={version="1.2", features=["full"]}
lazy_static="1.4"
clap="3.1"
hyper={version="0.14", features=["full"]}
rand="0.8"
util = { package = "webrtc-util", version = "0.5.3", default-features = false, features = ["conn", "vnet", "sync"] }
env_logger="0.9.0"